# travel_assistant_crewai_agents

./: README.md  pyproject.toml
src/travel_assistant/: crew.py  main.py
src/travel_assistant/agents/: advice_agent.py  flight_agent.py  hotels_agent.py  tours_agent.py
src/travel_assistant/tasks/: advice_task.py  flight_task.py  hotels_task.py  tours_task.py
src/travel_assistant/tools/: flight_tool.py
