[project]
name = "travel_assistant"
version = "0.1.0"
description = "travel_assistant using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.9.0"
]

[project.scripts]
travel_assistant = "travel_assistant.main:run"
run_crew = "travel_assistant.main:run"
train = "travel_assistant.main:train"
replay = "travel_assistant.main:replay"
test = "travel_assistant.main:test"
run_with_trigger = "travel_assistant.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
